--- a/main.css
+++ b/main.css
@@ -12,8 +12,8 @@ body{
 }
 
 #main{
-    padding: 30px;
-    height: 100vh;
+    padding: 0px;
+    height: 85vh;
     width: 100vw;
 }
 
@@ -22,4 +22,11 @@ h1{
     letter-spacing: .06rem;
     text-align: center;
     font-family: 'ufonest';
+}
+
+p{
+  color: #38614d;
+  letter-spacing: .09rem;
+  text-align: center;
+  font-family: 'ufonest';
 }
